--- a/CSS/main.css
+++ b/CSS/main.css
@@ -26,7 +26,7 @@
 
 .jumbotron {
     background-color: #0E0B16;
-    height: 660px;
+    height: 100%;
     
     
 }
@@ -47,9 +47,12 @@ h1 {
 .container {
     color:  #E7DFDD;
 }
-
+.logo{
+    padding: 0;
+    margin: 0;
+}
 .bg {
-    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url(../Photos/graffiti_wall.jpg);
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url(../Photos/city-street-background.jpg);
     background-repeat: no-repeat; !important
     background-attachment: scroll;
     background-size: 100%; !important
@@ -69,7 +72,13 @@ h1 {
 }
 
 .navbar {
-    background-color:   #4717F6;
+/*    background-color:   #4717F6;*/
+/*    background-color:rgba(63,191,155,0.5);*/
+    background-color:rgba(0,0,0,0.5);
+     padding-right: 5px;
+    padding-left: 5px;
+    margin-right: 0;
+    margin-left: 0;
 }
 
 #contact-us #panel-left h1 {
@@ -104,3 +113,4 @@ h1, h2, h3, h4 {
 #panel-left h2 {
     font-size: 20px;
 }
+
