--- a/CSS/main.css
+++ b/CSS/main.css
@@ -25,7 +25,7 @@
 } */
 
 .jumbotron {
-    background-color: #0E0B16;
+/*    background-color: #0E0B16;*/
     height: 100%;
     
 }
@@ -75,7 +75,16 @@ h1 {
 .lead {
     color:  #E7DFDD;
 }
+.checked {
+    color: orange;
+}
 
+.img-responsive{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
 .navbar {
 /*    background-color:   #4717F6;*/
 /*    background-color:rgba(63,191,155,0.5);*/
@@ -100,8 +109,55 @@ h1 {
 h1, h2, h3, h4 {
     font-family: sans-serif;
 }
+.description{
+/*    padding-left: 10px;*/
+    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.iteam-container{
+    padding: 5px 5px 5px 5px;
+    
+/*    box-shadow: 5px 10px #B2B2B2;*/
+    
+}
+#name{
+    text-align: center;
+    font-size: 18px;
+}
 
+#price{
+    text-align: center;
+}
+
+div.container-fluid.cool{
+/*    background-color: antiquewhite;*/
+}
+div.container-fluid.pop{
+     background-color: #E1FFFF;
+}
+div.row.popular{
+   
+    margin-top: 20px;
+    margin-bottom: 20px; 
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+img.large{
+    height: auto;
+    width: 75%;
+}
+/*
+
+div.row.popular{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: antiquewhite;
+}
+*/
 #contact-us {
     padding: 50px 20px;
 }
