--- a/CSS/main.css
+++ b/CSS/main.css
@@ -55,8 +55,9 @@ h1 {
 }
 
 .logo{
-    padding: 0;
     margin: 0;
+    font-size: 30px;
+    color: white;
 }
 .bg {
     background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url(../Photos/BackgroundCompletelyErased2.png);
@@ -92,12 +93,21 @@ h1 {
 /*    background-color:   #4717F6;*/
 /*    background-color:rgba(63,191,155,0.5);*/
     background-color:transparent;
-     padding-right: 5px;
+    padding-right: 5px;
     padding-left: 5px;
     margin-right: 0;
     margin-left: 0;
     border-color: transparent;
+    
 }
+.navbar-inverse .navbar-brand {
+    color: #ffffff;
+    
+}
+
+.navbar-inverse .navbar-brand:hover{
+        color: aqua;
+    }
 
 #contact-us #panel-left h1 {
     text-align: left;
