--- a/CSS/main.css
+++ b/CSS/main.css
@@ -24,77 +24,66 @@
     font-weight: bold;
 } */
 
+/**** NAVBAR Styles ****/
+
+/* Default navbar color override */
+
+.navbar, .dropdown-menu {
+    background-color:#002040;
+}
+
+.nav.navbar-nav li a:hover, .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
+    color:#002040;
+    background-color:white;
+}
+
+
+.navbar-inverse .navbar-brand, .nav.navbar-nav li a, .navbar-inverse .navbar-nav .open .dropdown-menu>li>a, a {
+    color:white;
+}
+
+/* NAV BAR STYLES END */
+
 .jumbotron {
 /*    background-color: #0E0B16;*/
-    height: 100%;
-    
+    background-image: url(../Photos/city-street-background.jpg);
+    background-size: cover;
+    height: 80vh;
+    margin: 0px;
+    padding: 0px;
 }
+
 
 h1 {
     text-align: center;
 }
 
-.row .jumbotron{
-    background-color: #E7DFDD;
-
+#section4-getInTouch h1, h2, h3, p {
+    color: white;
 }
 
 #main{
     display: none;
 }
 
-.container {
-    color:  #E7DFDD;
+
+.img-responsive {
+    width: 90%;
+    height: auto;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
-.content{
-    padding-left: 0;
-    padding-right: 0;
-}
 
 .logo{
     padding: 0;
     margin: 0;
 }
-.bg {
-    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url(../Photos/city-street-background.jpg);
-    background-repeat: no-repeat; !important
-    background-attachment: scroll;
-    background-size: 100%; !important
-    background-size: cover;
-    padding-right: 0;
-    padding-left: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin-right: 0;
-    margin-left: 0;
-    text-align: center;
 
-    
-}
-.lead {
-    color:  #E7DFDD;
-}
+
 .checked {
     color: orange;
 }
 
-.img-responsive{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
-.navbar {
-/*    background-color:   #4717F6;*/
-/*    background-color:rgba(63,191,155,0.5);*/
-    background-color:transparent;
-     padding-right: 5px;
-    padding-left: 5px;
-    margin-right: 0;
-    margin-left: 0;
-    border-color: transparent;
-}
 
 #contact-us #panel-left h1 {
     text-align: left;
@@ -117,12 +106,13 @@ h1, h2, h3, h4 {
     margin-right: auto;
 }
 
-.iteam-container{
-    padding: 5px 5px 5px 5px;
+.item-container{
+    padding: 5px;
     
 /*    box-shadow: 5px 10px #B2B2B2;*/
     
 }
+
 #name{
     text-align: center;
     font-size: 18px;
@@ -132,24 +122,6 @@ h1, h2, h3, h4 {
     text-align: center;
 }
 
-div.container-fluid.cool{
-/*    background-color: antiquewhite;*/
-}
-div.container-fluid.pop{
-     background-color: #E1FFFF;
-}
-div.row.popular{
-   
-    margin-top: 20px;
-    margin-bottom: 20px; 
-    padding-left: 50px;
-    padding-right: 50px;
-}
-
-img.large{
-    height: auto;
-    width: 75%;
-}
 /*
 
 div.row.popular{
@@ -158,9 +130,6 @@ div.row.popular{
     background-color: antiquewhite;
 }
 */
-#contact-us {
-    padding: 50px 20px;
-}
 
 #panel-right p{
     font-size: 14px;
@@ -175,8 +144,36 @@ div.row.popular{
 #panel-left h2 {
     font-size: 20px;
 }
-
+/* color saved: #EDE1CD */
 /*
 .popular{
     background-color: antiquewhite;  
 }*/
+
+#coolShirtsRow {
+    margin-top: 100px;
+    
+}
+
+#section1-shirts {
+    background-color: #00CCFF; /* Color 2 */
+    padding-top: 5vh;
+    padding-bottom: 10vh;
+}
+
+#section2-reviews {
+    background-color: #AEEEF5;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
+}
+
+#section3-buildYourOwnShirt {
+    background-color: #D9EBFF;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
+}
+
+#section4-getInTouch {
+    background-color: #002040;
+    padding-top: 15vh;
+}
