Added new navigation bar information.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -59,7 +59,7 @@
     color: white;
 }
 
-#section4-getInTouch h1, h2, h3, p {
+#section4-contactUs h1, h2, h3, p {
     color: white;
 }
 
@@ -165,7 +165,7 @@ div.row.popular{
     padding: 12vh 5vh;
 }
 
-#section4-getInTouch {
+#section4-contactUs {
     background-color: #002040;
     padding: 12vh 5vh;
 }
