--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,15 +1,17 @@
-/* COLOR PALETTE USED
+/* COLOR PALETTE TO BE USED
 
-    Background 1: Dark Purple   - #242582
-    Background 2:               - #553D67
-                                - #F64C72
+    Primary Color:      navigation      - #002040
 
-    Text:         Light Grey    - #99738E
-    Eye Catcher:  Blue          - #2F2FA2
+    Secondary Color 1:  section 1       - #00CCFF
+    Secondary Color 2:  section 2       - #AEEEF5
+    Secondary Color 3:  section 3       - #D9EBFF
 
+    Accent Color:       Highlight tool  - #FFA100
 */
 
-/* Decided to NOT add custom fonts atm */
+
+
+/* FONTS USED HERE */
 
 /*@font-face {
     font-family: "palanquin";
@@ -23,6 +25,8 @@
             format('truetype');
     font-weight: bold;
 } */
+
+
 
 /**** NAVBAR Styles ****/
 
@@ -43,6 +47,8 @@
 }
 
 /* NAV BAR STYLES END */
+
+
 
 .jumbotron {
 /*    background-color: #0E0B16;*/
@@ -150,8 +156,9 @@ div.row.popular{
 }*/
 
 
+
 #section1-shirts {
-    background-color: #00CCFF; /* Color 2 */
+    background-color: #00CCFF;
     padding: 10vh 5vh;
 }
 
