--- a/CSS/main.css
+++ b/CSS/main.css
@@ -36,7 +36,7 @@
     background-color:#002040;
 }
 
-.nav.navbar-nav li a:hover, .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover {
+.nav.navbar-nav li a:hover, .navbar-inverse .open .dropdown-menu>li>a:hover {
     color:#002040;
     background-color:white;
 }
@@ -68,8 +68,6 @@
 #section4-contactUs h1, h2, h3, p {
     color: white;
 }
-
-
 
 
 .img-responsive {
@@ -149,32 +147,27 @@ div.row.popular{
 #panel-left h2 {
     font-size: 20px;
 }
-/* color saved: #EDE1CD */
-/*
-.popular{
-    background-color: antiquewhite;  
-}*/
 
-
+/* Section used for Modifying sections */
 
 #section1-shirts {
     background-color: #00CCFF;
-    padding: 10vh 5vh;
+    padding: 10vh 8vh;
 }
 
 #section2-reviews {
     background-color: #AEEEF5;
-    padding: 12vh 5vh;
+    padding: 12vh 8vh;
 }
 
 #section3-buildYourOwnShirt {
     background-color: #D9EBFF;
-    padding: 12vh 5vh;
+    padding: 12vh 8vh;
 }
 
 #section4-contactUs {
     background-color: #002040;
-    padding: 12vh 5vh;
+    padding: 12vh 8vh;
 }
 
 #myPage {
