--- a/CSS/main.css
+++ b/CSS/main.css
@@ -36,7 +36,7 @@
     background-color:#002040;
 }
 
-.nav.navbar-nav li a:hover, .navbar-inverse .open .dropdown-menu>li>a:hover {
+.nav.navbar-nav li a:hover, .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover, .navbar-inverse .navbar-nav>.active>a {
     color:#002040;
     background-color:white;
 }
