--- a/CSS/main.css
+++ b/CSS/main.css
@@ -173,3 +173,21 @@ div.row.popular{
 #myPage {
     background-color: #002040;
 }
+
+#c{
+    background-image: url(../Photos/shirts/blue.png);
+    background-size: cover;
+}
+
+.pallete{
+    width:30px;
+    height:30px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+}
+
+/*
+.colorBox{
+    border: 10px  black;
+    padding: 20px;
+    background: white;
+}*/
