--- a/CSS/main.css
+++ b/CSS/main.css
@@ -183,11 +183,126 @@ div.row.popular{
     width:30px;
     height:30px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    margin: 5px;
 }
 
-/*
-.colorBox{
-    border: 10px  black;
-    padding: 20px;
-    background: white;
-}*/
+textarea.form-control#txtArea {
+    height: 50px;
+    width: 200px;
+}
+row.colours{
+    padding-top: 15px;
+}
+
+
+button#addtxt {
+    margin: 5px;
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #002040;
+  border: none;
+  border-radius: 10px;
+    box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+  
+}
+
+button#addtxt:hover {background-color: #13467a}
+
+button#addtxt:active {
+  background-color: #3e8e41;
+
+}
+
+button#use{
+    margin: 5px;
+    font-size: 16px;
+    text-align: center;
+    color: #fff;
+    background-color: #00CCFF;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+}
+button#use:hover{background-color: #59deff }
+
+
+.semi-square {
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    padding: 5px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+}
+
+.help{
+    padding: 0;
+    background: transparent;
+    border: none;
+}
+
+p.instruction{
+    color: black;
+    font-size: 16px;
+    font-family:sans-serif;
+}
+
+.modal-header {
+    background-color: cadetblue;
+    color: white;
+}
+
+
+
+.closeButton {
+    background-color: #5f9ea0;
+    color: white;
+    
+}
+.closeButton:hover{
+    background-color: #7BCCCF;
+    color:white;
+}
+
+#del {
+    background-color: orange;
+    color: black;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+}
+
+#clr {
+    
+    background-color: orangered;
+    color: white;
+    padding: 5px;
+    border-radius: 10px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+
+}
+
+.row.options{
+    padding-left: 28%;
+}
+
+
+.add2cart {
+    background-color:cadetblue;
+    font-size: 20px;
+    border-radius: 5px;
+    color: white;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    margin: 10px;
+    padding: 10px;
+}
