--- a/CSS/main.css
+++ b/CSS/main.css
@@ -78,6 +78,7 @@
 .navbar-inverse .navbar-nav > .active > a {
     color: rgba(0, 32, 64, 1);
     background-color: white;
+    border: none;
 }
 
 
@@ -94,7 +95,7 @@ a {
     /*    background-color: #0E0B16;*/
     background-image: url(../Photos/DesignsAdded.png);
     background-size: cover;
-    height: 90vh;
+    height: 93vh;
     margin: 0px;
     padding: 0px;
 }
@@ -483,9 +484,9 @@ p.instruction {
     border: none;
 }
 .anchor{
-    height: 40px;
+    height: 30px;
     display:block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10px;
+    margin-top: 5px;
 }
