--- a/CSS/main.css
+++ b/CSS/main.css
@@ -324,7 +324,12 @@ p.instruction{
 .chevron-down {
     top:55vh;
     position: relative;
+    
+    margin-left: auto;
+    margin-right: auto;
     transform:translateY(-100%);
     width:10%;
     height: auto;
+    vertical-align: middle;
 }
+
