--- a/CSS/main.css
+++ b/CSS/main.css
@@ -486,11 +486,28 @@ p.instruction {
 .anchor-contain{
     background-color: #AEEEF5;
     border: none;
+/*
+    padding: 0;
+    margin: 0;
+*/
 }
 .anchor{
     height: 30px;
     display:block;
-    margin-left: auto;
-    margin-right: auto;
+     margin-left: auto;
+    margin-right: auto; 
     margin-top: 5px;
+    vertical-align: middle;
+/*
+    padding: 0px;
+    margin: 0px;
+*/
+}
+
+div.container.chevron-contain {
+    background-color: #AEEEF5;
+    margin-right: 0;
+    margin-left: 0;
+    padding-left: 0;
+    margin-right: 0;
 }
