--- a/CSS/main.css
+++ b/CSS/main.css
@@ -485,7 +485,6 @@ p.instruction {
 
 .anchor-contain{
     background-color: #AEEEF5;
-    border: none;
 /*
     padding: 0;
     margin: 0;
@@ -493,11 +492,7 @@ p.instruction {
 }
 .anchor{
     height: 30px;
-    display:block;
-     margin-left: auto;
-    margin-right: auto; 
-    margin-top: 5px;
-    vertical-align: middle;
+    margin-top: 10px;
 /*
     padding: 0px;
     margin: 0px;
@@ -506,8 +501,9 @@ p.instruction {
 
 div.container.chevron-contain {
     background-color: #AEEEF5;
-    margin-right: 0;
-    margin-left: 0;
-    padding-left: 0;
-    margin-right: 0;
+}
+
+.col-centered {
+    float: none;
+    margin: 0 auto;
 }
