--- a/CSS/main.css
+++ b/CSS/main.css
@@ -123,6 +123,13 @@ p {
     width: 100%;
     height: auto;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    transition: .5s ease;
+}
+
+.img-responsive:hover {
+    opacity: 0.7;
+    background-color: #488996;
+
 }
 
 
@@ -513,6 +520,7 @@ p.instruction {
 
 div.container.chevron-contain {
     background-color: #AEEEF5;
+    border:none;
 }
 
 .col-centered {
