--- a/CSS/main.css
+++ b/CSS/main.css
@@ -645,3 +645,8 @@ However, delay the fade out process for 2.5 seconds */
     font-size: 18px;
     border-radius: 5px;
 }
+
+
+.index-section3-title {
+    padding: 0 15px 20px 15px;
+}
