--- a/CSS/main.css
+++ b/CSS/main.css
@@ -650,3 +650,16 @@ However, delay the fade out process for 2.5 seconds */
 .index-section3-title {
     padding: 0 15px 20px 15px;
 }
+
+
+.btn-primary-active {
+    width: 100%;
+    color: white;
+    background: #217af3;
+    padding: 12px;
+    font-size: 1.5vw;
+    border: 1px solid gray;
+    box-sizing: border-box;
+    border-left: none;
+    float: right;
+}
