--- a/CSS/main.css
+++ b/CSS/main.css
@@ -666,7 +666,8 @@ However, delay the fade out process for 2.5 seconds */
 
 .cartDetail {
     color: black;
-    font-size: 18px;
+    font-family: sans-serif;
+    font-size: 14px;
     
 }
 
@@ -674,12 +675,30 @@ However, delay the fade out process for 2.5 seconds */
     margin: 30px;
 }
 
-th.item-name, th.item-price, th.item-quantity{
+th.item-name, th.item-price, a.simpleCart_increment{
     padding-right: 80px;
+    
+}
+a.simpleCart_increment, a.simpleCart_decrement{
+    color: black;
 }
 
-td.item-name, td.item-price, td.item-quantity{
+a.simpleCart_remove {
+    color: red;
+    
+}
+td.item-name, td.item-price, a.simpleCart_increment{
     padding-right: 80px;
     line-height: 2;
+   
 }
 
+div.simplecart_items.table.th{
+    border: 2px;
+    border-style: solid;
+    border: black;
+}
+
+a.simpleCart_decrement{
+    padding-right:15px;
+}
