Added padding to See More button.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -705,3 +705,11 @@ div.simplecart_items.table.th{
 a.simpleCart_decrement{
     padding-right:15px;
 }
+
+
+
+
+
+.add-top-padding {
+    margin-top: 25px;
+}
