--- a/CSS/main.css
+++ b/CSS/main.css
@@ -56,14 +56,6 @@
 
 
 
-/*
-@font-face {
-  font-family: "Pacifico";
-  src: url(output-sans.woff2) format('woff2'),
-       url(output-sans.woff) format('woff');
-}
-*/
-
 /**** NAVBAR Styles ****/
 
 /* Default navbar color override */
@@ -186,14 +178,6 @@ h4 {
     text-align: center;
 }
 
-/*
-
-div.row.popular{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: antiquewhite;
-}
-*/
 
 #panel-right p {
     font-size: 14px;
@@ -277,8 +261,6 @@ button#addtxt {
     font-size: 18px;
     cursor: pointer;
     text-align: center;
-    /*    text-decoration: none;*/
-    /*    outline: none;*/
     color: #fff;
     background-color: #002040;
     border: none;
@@ -398,17 +380,6 @@ p.instruction {
 
 }
 
-/* Navbar JQuery scoll CSS */
-
-/*
-.navbar {
-    -webkit-transition: all 0.6s ease-out;
-    -moz-transition: all 0.6s ease-out;
-    -o-transition: all 0.6s ease-out;
-    -ms-transition: all 0.6s ease-out;
-    transition: all 0.6s ease-out;
-}
-*/
 
 .checkoutBlackText {
     color: black;
@@ -587,20 +558,19 @@ free-wall {
 
 /*Snackbar*/
 
-/* The snackbar - position it at the bottom and in the middle of the screen */
 #snackbar {
-    visibility: hidden; /* Hidden by default. Visible on click */
-    min-width: 250px; /* Set a default minimum width */
-    margin-left: -125px; /* Divide value of min-width by 2 */
-    background-color: #D9EBFF; /* Black background color */
-    color: #333; /* White text color */
-    text-align: center; /* Centered text */
-    border-radius: 2px; /* Rounded borders */
-    padding: 10px; /* Padding */
-    position: fixed; /* Sit on top of the screen */
-    z-index: 1; /* Add a z-index if needed */
-    left: 50%; /* Center the snackbar */
-    bottom: 30px; /* 30px from the bottom */
+    visibility: hidden; 
+    min-width: 250px; 
+    margin-left: -125px; 
+    background-color: #D9EBFF; 
+    color: #333;
+    text-align: center; 
+    border-radius: 2px;
+    padding: 10px; 
+    position: fixed; 
+    z-index: 1; 
+    left: 50%; 
+    bottom: 30px;
     border-radius: 10px;
 
 }
@@ -705,10 +675,6 @@ div.simplecart_items.table.th{
 a.simpleCart_decrement{
     padding-right:15px;
 }
-
-
-
-
 
 .add-top-padding {
     margin-top: 25px;
